--- a/main.html
+++ b/main.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<button id="openModal">open Modal</button>
-	<div id="myModal" class="modal">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h2>Modal Header</h2>
-      <button class="close-modal">&times;</button>
-    </div>
-    <div class="modal-body">
-      <p>Modal Body Content</p>
-    </div>
-  </div>
-</div>
-    <script type="text/javascript" src="./script.js">
-</script>
+    <button id="openModal">Open Modal</button>
 
+    <div id="myModal" class="modal" style="display: none;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Modal Header</h2>
+                <button class="close-modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p>Modal Body Content</p>
+            </div>
+        </div>
+    </div>
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
